css for employee profile - issue with white space on small screen / need to edit admin interface

--- a/WinterVacationWork/EmployeeInterface/employeeInterface.css
+++ b/WinterVacationWork/EmployeeInterface/employeeInterface.css
@@ -4,9 +4,6 @@ body{
   -webkit-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-
-  border: 1px solid red;
-
 }
 #window{
   text-align: center;
